<?xml version="1.0" encoding="utf-8"?>

<com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shimmerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.character_details.view.CharacterDetailsFragment">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivPoster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:background="?attr/colorLoading"
                android:maxWidth="180dp"
                app:layout_constraintHeight_min="140dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="200dp"
                app:layout_constraintWidth_min="160dp"
                app:shapeAppearance="@style/ShapeAppearanceOverlay.App.Corner" />

            <TextView
                android:id="@+id/tvCharacterName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/colorLoading"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPoster"
                app:layout_constraintTop_toTopOf="@id/ivPoster"
                tools:text="Character name here" />

            <TextView
                android:id="@+id/tvCharacterDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/colorLoading"
                android:maxLines="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPoster"
                app:layout_constraintTop_toBottomOf="@id/tvCharacterName"
                tools:text="Sin descripción disponible." />

            <com.nestor.superheromvvm.ui.common.SectionContainerView
                android:id="@+id/comicsSection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivPoster"
                app:text="@string/comics">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvComics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/character_extra_data" />

                    <TextView
                        android:id="@+id/tvComicsEmpty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/empty_comics"
                        android:textAlignment="center"
                        android:visibility="gone" />
                </LinearLayout>


            </com.nestor.superheromvvm.ui.common.SectionContainerView>

            <com.nestor.superheromvvm.ui.common.SectionContainerView
                android:id="@+id/storiesSection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comicsSection"
                app:text="@string/stories">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvStories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/character_extra_data" />

                    <TextView
                        android:id="@+id/tvStoresEmpty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/empty_stories"
                        android:textAlignment="center"
                        android:visibility="gone" />

                </LinearLayout>

            </com.nestor.superheromvvm.ui.common.SectionContainerView>

            <com.nestor.superheromvvm.ui.common.SectionContainerView
                android:id="@+id/seriesSection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/storiesSection"
                app:text="@string/series">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvSeries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/character_extra_data" />

                    <TextView
                        android:id="@+id/tvSeriesEmpty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/empty_series"
                        android:textAlignment="center"
                        android:visibility="gone" />
                </LinearLayout>

            </com.nestor.superheromvvm.ui.common.SectionContainerView>

            <com.nestor.superheromvvm.ui.common.SectionContainerView
                android:id="@+id/eventsSection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/seriesSection"
                app:text="@string/events">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvEvents"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="0"
                        tools:listitem="@layout/character_extra_data" />

                    <TextView
                        android:id="@+id/tvEventsEmpty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/empty_events"
                        android:textAlignment="center"
                        android:visibility="gone" />
                </LinearLayout>

            </com.nestor.superheromvvm.ui.common.SectionContainerView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</com.facebook.shimmer.ShimmerFrameLayout>
